<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColr"
    android:padding="16dp"
    tools:context=".settings.SettingsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImgSettings"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/layout_id_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImgSettings"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/emailTextViewSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textSize="21sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_id_id"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_user" />

        <TextView
            android:id="@+id/displayNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textSize="21sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/deleteAccountTextViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:gravity="bottom"
        android:text="@string/delete_account"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/changePwdTextViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deleteAccountTextViewSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/change_pwd"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBarSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImgSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="gone" />


</RelativeLayout>